tests/macros/input/choices.rs
fn main() {
    discourse::questions![Input { choices: todo!() }];
}
